Dispatch: Minor issues fixed, Control view changes added and spell correction done Call taker: Fixed issue pointed out by Ashwin in Vehicle type

--- a/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
@@ -1,4 +1,4 @@
-<div class="">
+<!-- <div class="">
 	<div ng-repeat="detail in bookingDetails">
     <div ng-show="isFieldAvailable(detail.value)" class="fieldData">
       <span class="heading7 ellipsisLabel" title="{{lang.label.layout_emailField}}" data-ng-bind="detail.name">
@@ -6,4 +6,148 @@
       <span class="userDtls ellipsisLabel" title="{{detail.value}}" data-ng-bind="detail.value"></span>
     </div>
   </div>
+</div> -->
+
+<!-- Booking Details start -->
+<div class="container-fluid bookingDetailsControlView">
+	<div class="row">
+		<div class="col-xs-6"><label title="Customer Id">C.Id</label>1234567890123456</div>
+		<div class="col-xs-6"><label title="Driver Name">Dr. Name</label> Nortan</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6"><label title="Customer Name">C.Name</label> UI</div>
+		<div class="col-xs-6"><label title="Trip Count">Trip Count</label> 9</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6"><label title="Grade / Category">Grade/Cat.</label> 999</div>
+		<div class="col-xs-6">
+			<label title="Driver No">D.No.</label>
+			<select>
+				<option value="">999999999</option>
+				<option value="">777777777</option>
+			</select>
+			<!-- Call Icon comes here -->
+			<a href="javascript:void(0);">Call</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6"><label title="Booking">B.Id</label> 999</div>
+		<div class="col-xs-6"></div>
+	</div>
+	<h4>Booking Details</h4>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Date & Time">D&amp;T</label> <strong>24/02/2014 20:40</strong>
+		</div>
+		<div class="col-xs-6">
+			<!-- <label title="From - To">Frm-To</label> -->
+			<strong><span class="ellipsisText" title="Tolichowki - Dilshuknagar">Tolichowki - Dilshuknagar</span></strong>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Journey Type">JT</label> City
+		</div>
+		<div class="col-xs-6">
+			<label title="Sub Journey Type">Sub JT</label>
+			<span class="ellipsisText" title="Point-to-Point">Point-to-Point</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6"><label title="Landmark 1">Landmark1</label> 999</div>
+		<div class="col-xs-6"><label title="Landmark 2">Landmark2</label> 999</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<label title="Package Details">Package</label>
+			Duration - 120 mins, KMs - 25, Price - 400
+		</div>
+	</div>
+
+	<h4>Call Info</h4>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Call Taker Name">CT. Name</label>
+			<span class="ellipsisText" title="Xyxll">Xyxll</span>
+		</div>
+		<div class="col-xs-6">
+			<label title="Dispatcher Name">D. Name</label>
+			<span class="ellipsisText" title="James">James</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Start Report By">SR. By</label>
+			<span class="ellipsisText" title="Andrew">Andrew</span>
+		</div>
+		<div class="col-xs-6">
+			<label title="Close Report By">CR. By</label>
+			<span class="ellipsisText" title="Brain">Brain</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Modified By">Mod. By</label>
+			<span class="ellipsisText" title="Tim">Tim</span>
+		</div>
+		<div class="col-xs-6">
+			<label title="Cancel By">Cancel By</label>
+			<span class="ellipsisText" title="Teffy">Teffy</span>
+		</div>
+	</div>
+
+	<h4>Driver Details</h4>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Driver Id">Dr. Id</label> 123456
+		</div>
+		<div class="col-xs-6">
+			<label title="Driver Name">Dr. Name</label>
+			<span class="ellipsisText" title="Xyxll">Xyxll</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Vehicle Id">Veh.Id</label> 55566
+		</div>
+		<div class="col-xs-6">
+			<label title="Driver No">D.No.</label>
+			<select>
+				<option value="">999999999</option>
+				<option value="">777777777</option>
+			</select>
+			<!-- Call Icon comes here -->
+			<a href="javascript:void(0);">Call</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Vehicle Name">V. Name</label>
+			<span class="ellipsisText" title="Indica">Indica</span>
+		</div>
+		<div class="col-xs-6">
+			<label title="Registration No.">Reg. No</label> 99648
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Vehicle Model">V. Model</label> 08 - 2012
+		</div>
+		<div class="col-xs-6">
+			<label title="Previous Location">Prev. Loc</label>
+			<span class="ellipsisText" title="Mehdipatnam">Mehdipatnam</span>
+		</div>
+	</div>
+	<h4>Comments</h4>
+	<div class="row">
+		<div class="col-xs-12">
+			<label title="Comments By">By</label>
+			Dallas
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<textarea disabled>Comments here</textarea>
+		</div>
+	</div>
 </div>
