--- a/sigmaCabs/app/views/dispatches/changeVehicle.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicle.html
@@ -19,7 +19,7 @@
                 <legend class="searchbox-border">Change Vehicle</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Vehicle</label>
-                    <span>{{vehicleDetails.vehicleMainDetials.details.vehicleCode}}</span> <!--  current Vehicle code -->
+                    <span>{{vehicleDetails.vehicleMainDetails.details.vehicleCode}}</span> <!--  current Vehicle code -->
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">New Vehicle</label>
