--- a/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
@@ -19,7 +19,7 @@
                 <legend class="searchbox-border">Closing Report</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Start Time</label>
-                    <span>{{vehicleDetails.vehicleMainDetials.details.pickupTime}}</span>
+                    <span>{{vehicleDetails.vehicleMainDetails.details.pickupTime}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Time</label>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Start Kms</label>
-                    <span>{{vehicleDetails.vehicleMainDetials.details.startKms}}</span>
+                    <span>{{vehicleDetails.vehicleMainDetails.details.startKms}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Kms</label>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Actual Drop Place</label>
-                    <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetials.details.dropPlace}}">{{vehicleDetails.vehicleMainDetials.details.dropPlace}}</span>
+                    <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetails.details.dropPlace}}">{{vehicleDetails.vehicleMainDetails.details.dropPlace}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Drop Place</label>
