--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -12,7 +12,7 @@
     <p class="clear" />
     <div class="fieldContainer relative left">
         <label class="labelCompact">Current Loc</label>
-        <span>{{vehicleMainDetials.location}}</span>
+        <span>{{vehicleMainDetails.location}}</span>
     </div>
     <div class="fieldContainer relative right">
         <label class="labelCompact">New Location</label>
@@ -20,7 +20,7 @@
     </div>
      <div class="fieldContainer relative left">
         <label class="labelCompact">Reg. No.</label>
-        <span>{{vehicleMainDetials.details.registrationNumber}}</span>
+        <span>{{vehicleMainDetails.details.registrationNumber}}</span>
     </div>
     <div class="fieldContainer relative right" style="width: 180px;">
         <label class="labelCompact">V.Model</label>
