--- a/sigmaCabs/app/views/dispatches/vehiclesForBookingSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehiclesForBookingSplitView.html
@@ -9,6 +9,74 @@
 			</div>
 			<div class="panel-body padding-5-panel-body">
 			  <div class="vehicle-details-holder">
+			  	<div class="container-fluid vehicleDetailsControlView">
+					<h4>Vehicle and Driver Details</h4>
+					<div class="row">
+						<div class="col-xs-6">
+							<label title="Driver Id">Dr. Id</label> 123456
+						</div>
+						<div class="col-xs-6">
+							<label title="Driver Name">D.Name</label>
+							<span class="ellipsisText" title="Xyxll">Xyxll</span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-6">
+							<label title="Vehicle Id">Veh.Id</label> 55566
+						</div>
+						<div class="col-xs-6">
+							<label title="Driver No">D.No.</label>
+							<select>
+								<option value="">999999999</option>
+								<option value="">777777777</option>
+							</select>
+							<!-- Call Icon comes here -->
+							<a href="javascript:void(0);">Call</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-6">
+							<label title="Total Days">T.Days</label> 30
+						</div>
+						<div class="col-xs-6">
+							<label title="Total Working Days">TW.Days</label> 25
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-6">
+							<label title="Projected Login Time">PL Time</label> 600
+						</div>
+						<div class="col-xs-6">
+							<label title="Present Average Login Time">PAL. Time</label> 30
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-6">
+							<label title="Projected Collection">P.Coll</label> 30000
+						</div>
+						<div class="col-xs-6">
+							<label title="Present Average Collection">PA.Coll</label> 26000
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-6">
+							<label title="Driver Rating">DR</label>
+							<span class="glyphicon glyphicon-star"></span>
+							<span class="glyphicon glyphicon-star"></span>
+							<span class="glyphicon glyphicon-star"></span>
+							<span class="glyphicon glyphicon-star-empty"></span>
+							<span class="glyphicon glyphicon-star-empty"></span>
+						</div>
+						<div class="col-xs-6">
+							<label title="Vehicle Rating">VR</label>
+							<span class="glyphicon glyphicon-star"></span>
+							<span class="glyphicon glyphicon-star"></span>
+							<span class="glyphicon glyphicon-star"></span>
+							<span class="glyphicon glyphicon-star"></span>
+							<span class="glyphicon glyphicon-star-empty"></span>
+						</div>
+					</div>
+				</div>
 			  </div>
 			</div>
 		</div>
