--- a/sigmaCabs/app/styles/controlView.scss
+++ b/sigmaCabs/app/styles/controlView.scss
@@ -146,3 +146,68 @@
 
   }
 }
+
+/* Booking details Control */
+.bookingDetailsControlView {
+  font-size: 12px;
+  margin: 5px;
+  .ellipsisText {
+    display: inline-flex;
+    width: 115px;
+  }
+  h4 {
+    border-bottom: 1px solid #ccc;
+    font-size: 16px;
+    margin: 5px 0 3px;
+    padding-bottom: 2px;
+  }
+  label {
+    width: 64px;
+    margin-right: 2px;
+  }
+  textarea {
+    min-height: 60px;
+    width: 100%;
+  }
+  .row {
+    margin: 0 -5px !important;
+    .col-xs-12 {
+      padding-left: 5px !important;
+    }
+    .col-xs-6 {
+      padding: 0 5px !important;
+    }
+  }
+}
+
+/* vehicle details Control */
+.vehicleDetailsControlView {
+  font-size: 12px;
+  .ellipsisText {
+    display: inline-flex;
+    width: 115px;
+  }
+  h4 {
+    border-bottom: 1px solid #ccc;
+    font-size: 16px;
+    margin: 5px 0 3px;
+    padding-bottom: 2px;
+  }
+  label {
+    width: 64px;
+    margin-right: 2px;
+  }
+  textarea {
+    min-height: 60px;
+    width: 100%;
+  }
+  .row {
+    margin: 0 -5px !important;
+    .col-xs-12 {
+      padding-left: 5px !important;
+    }
+    .col-xs-6 {
+      padding: 0 5px !important;
+    }
+  }
+}
