--- a/sigmaCabs/app/views/dispatch.html
+++ b/sigmaCabs/app/views/dispatch.html
@@ -71,7 +71,7 @@
 	        </div>
 	        <div class="fieldContainer left marginRightLeft5 bookingInput">
 	            <label class="labelCompact">Vehicle Id</label>
-	            <span class = "bokingLabel">{{vehicleMainDetials.vehicleCode}}</span>
+	            <span class = "bokingLabel">{{vehicleMainDetails.vehicleCode}}</span>
 	            <!-- <input type="text" ng-model="customer.customerDetails.customerID" class="left validate[required,maxSize[128]] textFieldCompact"  /> -->
 	        </div>
 
