--- a/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
@@ -19,7 +19,7 @@
                 <legend class="searchbox-border">Change Vehicle Location</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Location</label>
-                    <span>{{vehicleDetails.vehicleMainDetials.location}}</span>
+                    <span>{{vehicleDetails.vehicleMainDetails.location}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">New Location</label>
