--- a/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
@@ -26,8 +26,7 @@
 				<option value="">999999999</option>
 				<option value="">777777777</option>
 			</select>
-			<!-- Call Icon comes here -->
-			<a href="javascript:void(0);">Call</a>
+			<span class="glyphicon glyphicon-earphone call-icon" title="Call"></span>
 		</div>
 	</div>
 	<div class="row">
@@ -116,8 +115,7 @@
 				<option value="">999999999</option>
 				<option value="">777777777</option>
 			</select>
-			<!-- Call Icon comes here -->
-			<a href="javascript:void(0);">Call</a>
+			<span class="glyphicon glyphicon-earphone call-icon" title="Call"></span>
 		</div>
 	</div>
 	<div class="row">
