--- a/sigmaCabs/app/views/dispatches/changeVehicle.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicle.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">New Vehicle</label>
-                    <span>{{vChange.newVehicleCode}}</span> <!-- new Vehicle code -->
+                    <input type="text" ng-model="vChange.newVehicleCode" maxlength="15" class="textFieldCompact"/>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Reason</label><!--  ng-model="" -->
