--- a/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
@@ -14,8 +14,7 @@
 			<label title="Vehicle Id">Veh.Id</label> {{vehicleDetailsData.vehicle.vehicleCode}}
 		</div>
 		<div class="col-xs-6">
-			<label title="Driver No">D.No.</label>
-			<select>
+			<select title="Driver No">
 				<option value="">999999999</option>
 				<option value="">777777777</option>
 			</select>
