--- a/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
@@ -1,28 +1,9 @@
-<!-- <div class="">
-	<div ng-repeat="detail in bookingDetails">
-    <div ng-show="isFieldAvailable(detail.value)" class="fieldData">
-      <span class="heading7 ellipsisLabel" title="{{lang.label.layout_emailField}}" data-ng-bind="detail.name">
-      </span><span ng-show="addr.colon">:</span>
-      <span class="userDtls ellipsisLabel" title="{{detail.value}}" data-ng-bind="detail.value"></span>
-    </div>
-  </div>
-</div> -->
-
 <!-- Booking Details start -->
 <div class="container-fluid bookingDetailsControlView">
 	<div class="row">
-		<div class="col-xs-6"><label title="Customer Id">C.Id</label>1234567890123456</div>
-		<div class="col-xs-6"><label title="Driver Name">Dr. Name</label> Nortan</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-6"><label title="Customer Name">C.Name</label> UI</div>
-		<div class="col-xs-6"><label title="Trip Count">Trip Count</label> 9</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-6"><label title="Grade / Category">Grade/Cat.</label> 999</div>
+		<div class="col-xs-6"><label title="Customer Id">C.Id</label>{{bookingDetailsData.customer.customerCode}}</div>
 		<div class="col-xs-6">
-			<label title="Driver No">D.No.</label>
-			<select>
+			<select title="Customer No">
 				<option value="">999999999</option>
 				<option value="">777777777</option>
 			</select>
@@ -30,36 +11,54 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-6"><label title="Booking">B.Id</label> 999</div>
+		<div class="col-xs-6"><label title="Customer Name">C.Name</label> {{bookingDetailsData.customer.name}}</div>
+		<div class="col-xs-6"><label title="Trip Count">Trip Count</label> {{bookingDetailsData.customer.tripCount}}</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6"><label title="Grade / Category">Grade/Cat.</label> {{bookingDetailsData.customer.grade}} / {{bookingDetailsData.customer.category}}</div>
 		<div class="col-xs-6"></div>
 	</div>
+	
 	<h4>Booking Details</h4>
 	<div class="row">
-		<div class="col-xs-6">
-			<label title="Date & Time">D&amp;T</label> <strong>24/02/2014 20:40</strong>
+		<div class="col-xs-12">
+			<label title="Booking">B.Id</label> {{bookingDetailsData.booking.bookingCode}}
 		</div>
-		<div class="col-xs-6">
-			<!-- <label title="From - To">Frm-To</label> -->
-			<strong><span class="ellipsisText" title="Tolichowki - Dilshuknagar">Tolichowki - Dilshuknagar</span></strong>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-6">
-			<label title="Journey Type">JT</label> City
-		</div>
-		<div class="col-xs-6">
-			<label title="Sub Journey Type">Sub JT</label>
-			<span class="ellipsisText" title="Point-to-Point">Point-to-Point</span>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-6"><label title="Landmark 1">Landmark1</label> 999</div>
-		<div class="col-xs-6"><label title="Landmark 2">Landmark2</label> 999</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
-			<label title="Package Details">Package</label>
-			Duration - 120 mins, KMs - 25, Price - 400
+			<label title="Date & Time">D&amp;T</label> <strong>{{bookingDetailsData.booking.pickupDate}} {{bookingDetailsData.booking.pickupTime}}</strong>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<label title="From - To">From - To</label>
+			<strong title="{{bookingDetailsData.booking.pickupPlace}} - {{bookingDetailsData.booking.dropPlace}}">{{bookingDetailsData.booking.pickupPlace}} - {{bookingDetailsData.booking.dropPlace}}</strong>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Journey Type">JT</label>
+			<span class="ellipsisText" title="{{bookingDetailsData.booking.journeyTypeText}}">{{bookingDetailsData.booking.journeyTypeText}}</span>
+		</div>
+		<div class="col-xs-6">
+			<label title="Sub Journey Type">Sub JT</label>
+			<span class="ellipsisText" title="{{bookingDetailsData.booking.subJourneyTypeText}}">{{bookingDetailsData.booking.subJourneyTypeText}}</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6">
+			<label title="Landmark 1">Landmark1</label>
+			<span class="ellipsisText" title="{{bookingDetailsData.booking.landmark1}}">{{bookingDetailsData.booking.landmark1}}</span>
+		</div>
+		<div class="col-xs-6">
+			<label title="Landmark 2">Landmark2</label>
+			<span class="ellipsisText" title="{{bookingDetailsData.booking.landmark2}}">{{bookingDetailsData.booking.landmark2}}</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<label title="Package Details">Package</label>{{bookingDetailsData.booking.tariffText}}
 		</div>
 	</div>
 
@@ -67,51 +66,50 @@
 	<div class="row">
 		<div class="col-xs-6">
 			<label title="Call Taker Name">CT. Name</label>
-			<span class="ellipsisText" title="Xyxll">Xyxll</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.employee.callTakenBy}}">{{bookingDetailsData.employee.callTakenBy}}</span>
 		</div>
 		<div class="col-xs-6">
 			<label title="Dispatcher Name">D. Name</label>
-			<span class="ellipsisText" title="James">James</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.employee.callDispatchedBy}}">{{bookingDetailsData.employee.callDispatchedBy}}</span>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-6">
 			<label title="Start Report By">SR. By</label>
-			<span class="ellipsisText" title="Andrew">Andrew</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.employee.startReportTakenBy}}">{{bookingDetailsData.employee.startReportTakenBy}}</span>
 		</div>
 		<div class="col-xs-6">
 			<label title="Close Report By">CR. By</label>
-			<span class="ellipsisText" title="Brain">Brain</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.employee.closeReportTakenBy}}">{{bookingDetailsData.employee.closeReportTakenBy}}</span>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-6">
 			<label title="Modified By">Mod. By</label>
-			<span class="ellipsisText" title="Tim">Tim</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.employee.modifiedBy}}">{{bookingDetailsData.employee.modifiedBy}}</span>
 		</div>
 		<div class="col-xs-6">
 			<label title="Cancel By">Cancel By</label>
-			<span class="ellipsisText" title="Teffy">Teffy</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.employee.cancelledBy}}">{{bookingDetailsData.employee.cancelledBy}}</span>
 		</div>
 	</div>
 
 	<h4>Driver Details</h4>
 	<div class="row">
 		<div class="col-xs-6">
-			<label title="Driver Id">Dr. Id</label> 123456
+			<label title="Driver Id">Dr. Id</label> {{bookingDetailsData.driver.driverCode}}
 		</div>
 		<div class="col-xs-6">
 			<label title="Driver Name">Dr. Name</label>
-			<span class="ellipsisText" title="Xyxll">Xyxll</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.driver.namevehicle}}">{{bookingDetailsData.driver.name}}</span>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-6">
-			<label title="Vehicle Id">Veh.Id</label> 55566
+			<label title="Vehicle Id">Veh.Id</label> {{bookingDetailsData.vehicle.vehicleCode}}
 		</div>
 		<div class="col-xs-6">
-			<label title="Driver No">D.No.</label>
-			<select>
+			<select title="Driver No">
 				<option value="">999999999</option>
 				<option value="">777777777</option>
 			</select>
@@ -121,26 +119,25 @@
 	<div class="row">
 		<div class="col-xs-6">
 			<label title="Vehicle Name">V. Name</label>
-			<span class="ellipsisText" title="Indica">Indica</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.vehicle.vehicleName}} ({{bookingDetailsData.vehicle.vehicleType}})">{{bookingDetailsData.vehicle.vehicleName}}</span>
 		</div>
 		<div class="col-xs-6">
-			<label title="Registration No.">Reg. No</label> 99648
+			<label title="Registration No.">Reg. No</label> {{bookingDetailsData.vehicle.registrationNumber}}
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-6">
-			<label title="Vehicle Model">V. Model</label> 08 - 2012
+			<label title="Vehicle Model">V. Model</label> --  <!--  {{bookingDetailsData.vehicle.model}} -->
 		</div>
 		<div class="col-xs-6">
 			<label title="Previous Location">Prev. Loc</label>
-			<span class="ellipsisText" title="Mehdipatnam">Mehdipatnam</span>
+			<span class="ellipsisText" title="{{bookingDetailsData.vehicle.previousLocation}}">{{bookingDetailsData.vehicle.previousLocation}}</span>
 		</div>
 	</div>
 	<h4>Comments</h4>
 	<div class="row">
 		<div class="col-xs-12">
-			<label title="Comments By">By</label>
-			Dallas
+			<label title="Comments By">By</label> -- <!-- {{bookingDetailsData.customer.comments}} -->
 		</div>
 	</div>
 	<div class="row">
