--- a/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
@@ -48,19 +48,15 @@
 	<div class="row">
 		<div class="col-xs-6">
 			<label title="Driver Rating">DR {{vehicleDetailsData.driver.rating}}</label>
-			<span class="glyphicon glyphicon-star"></span>
-			<span class="glyphicon glyphicon-star"></span>
-			<span class="glyphicon glyphicon-star"></span>
-			<span class="glyphicon glyphicon-star-empty"></span>
-			<span class="glyphicon glyphicon-star-empty"></span>
+			<span ng-repeat="j in vehicleDetailsData.driver.aRating">
+				<span class="glyphicon {{j.cls}}"></span>
+			</span>
 		</div>
 		<div class="col-xs-6">
 			<label title="Vehicle Rating">VR {{vehicleDetailsData.vehicle.rating}}</label>
-			<span class="glyphicon glyphicon-star"></span>
-			<span class="glyphicon glyphicon-star"></span>
-			<span class="glyphicon glyphicon-star"></span>
-			<span class="glyphicon glyphicon-star"></span>
-			<span class="glyphicon glyphicon-star-empty"></span>
+			<span ng-repeat="j in vehicleDetailsData.vehicle.aRating">
+				<span class="glyphicon {{j.cls}}"></span>
+			</span>
 		</div>
 	</div>
 	<div class="row">
